fixed: persistent challenges

--- a/index.html
+++ b/index.html
@@ -1043,13 +1043,13 @@
                 </div>
 
                 <div class="right">
-                  <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
-                    <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp');"></div>
-                    <div class="pill__pad">
-                      <p class="pill__kpi">Advanced tertiary care</p>
-                      <p class="pill__desc">concentrated in limited urban centres</p>
+                  <div class="block block--botSq reveal reveal--soft" style="--d:420ms">
+                    <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp');"></div>
+                    <div class="block__text">
+                      <p class="block__kpi">Advanced tertiary care</p>
+                      <p class="block__desc">concentrated in limited urban centres</p>
                     </div>
-                  </article>
+                  </div>
                 </div>
 
               </div>
@@ -1225,12 +1225,13 @@
   </main>
 
   <!-- Floating scroll-to-top button (bottom-right) -->
-  <button class="fabTop" data-top type="button" aria-label="Scroll to top">â†‘</button>
+  <button class="fabTop" data-top type="button" aria-label="Scroll to top">&#x2191;</button>
 
   <script src="script.js"></script>
 </body>
 
 </html>
+
 
 
 
