--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
 
     <!-- Uttarakhand Healthcare - Key Data Insights -->
     <section id="insights" class="panel2 panel2--discussion" style="overflow: hidden;">
-      <div class="wrap">
+      <div class="">
         <div class="kdpTitle reveal">
           <h2>Uttarakhand Healthcare - Key Data Insights</h2>
           <div class="sectionRule" aria-hidden="true"></div>
@@ -978,18 +978,23 @@
 
                 <div class="right">
                   <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
+                    <div class="pill_center">
                     <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/272%20ALS-BLS%20ambulances%20strengthening%20emergency%20response/4e275d2eeec8131e5b819ca8eadbbd4a.webp');"></div>
                     <div class="pill__pad">
-                      <p class="pill__kpi">272 ALS/BLS ambulances</p>
-                      <p class="pill__desc">strengthening emergency response</p>
+
+                        <p class="pill__kpi">272 ALS/BLS ambulances</p>
+                        <p class="pill__desc">strengthening emergency response</p>
+                      </div>
                     </div>
                   </article>
 
                   <article class="pill pill--sq reveal reveal--soft" style="--d:420ms">
+                   <div class="pill_center">
                     <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/5%2C000%20villages%20declared%20TB-free/e77650404d6227a5e8001e503a527fb0.webp');"></div>
                     <div class="pill__pad">
                       <p class="pill__kpi">5,000 villages</p>
                       <p class="pill__desc">declared TB-free across the state</p>
+                    </div>
                     </div>
                   </article>
                 </div>
