--- a/awards.html
+++ b/awards.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -33,7 +34,7 @@
         <a href="index.html#why">Why To Attend</a>
         <a href="awards.html">Awards</a>
         <a href="index.html#contact">Contact</a>
-        <a class="pill" href="index.html#contact">Register</a>
+        <a class="pill" href="https://forms.zohopublic.in/deveshjain0304gm1/form/UttarakhandHealthcareInnovationSummit/formperma/Dewdd3W-n_OcKObxPYvpW0XBDOKU9xNJxNV0ZbdvKd8" target="_blank">Register</a>
       </nav>
     </div>
   </header>
@@ -123,7 +124,7 @@
     </section>
 
     <!-- Footer -->
-  <footer class="footer2">
+   <footer class="footer2">
       <div class="wrap footer2__inner">
         <div class="footer2__brandBlock">
           <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
@@ -135,24 +136,24 @@
         <div class="footer2__columns">
           <div class="footer2__col">
             <div class="footer2__title">Summit</div>
-            <a href="#about">About</a>
-            <a href="#metrics">Key Metrics</a>
-            <a href="#focus">Focus Areas</a>
-            <a href="#speakers">Speakers</a>
-            <a href="#insights">Insights</a>
+            <a href="intex.html#about">About</a>
+            <a href="intex.html#metrics">Key Metrics</a>
+            <a href="intex.html#focus">Focus Areas</a>
+            <a href="intex.html#speakers">Speakers</a>
+            <a href="intex.html#insights">Insights</a>
           </div>
           <div class="footer2__col">
             <div class="footer2__title">Explore</div>
-            <a href="#why">Why Attend</a>
-            <a href="#who">Who Will Be There</a>
-            <a href="#contact">Contact</a>
-            <a href="#top">Back to Top</a>
+            <a href="intex.html#why">Why Attend</a>
+            <a href="intex.html#who">Who Will Be There</a>
+            <a href="intex.html#contact">Contact</a>
+            <a href="intex.html#top">Back to Top</a>
           </div>
           <div class="footer2__col footer2__col--cta">
             <div class="footer2__title">Connect</div>
             <div class="hero2__socials">
 
-              <a href="https://www.linkedin.com/company/veloxxmedia/" target="_blank" aria-label="LinkedIn">
+              <a href="https://www.linkedin.com/company/veloxxmedia/" target="_blank" aria-label="LinkedIn" style="fill: white;">
                 <i class="fab fa-linkedin-in"></i>
               </a>
               <a href="https://www.facebook.com/veloxxmedia" target="_blank" aria-label="Facebook">
@@ -172,7 +173,7 @@
               </a>
             </div>
 
-            <a class="footer2__cta" href="#contact">Register</a>
+            <a class="footer2__cta" href="https://forms.zohopublic.in/deveshjain0304gm1/form/UttarakhandHealthcareInnovationSummit/formperma/Dewdd3W-n_OcKObxPYvpW0XBDOKU9xNJxNV0ZbdvKd8" target="_blank">Register</a>
           </div>
         </div>
 
