--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="#why">Why To Attend</a>
         <a href="awards.html">Awards</a>
         <a href="#contact">Contact</a>
-        <a class="pill" href="#contact">Register</a>
+        <a class="pill" href="https://forms.zohopublic.in/deveshjain0304gm1/form/UttarakhandHealthcareInnovationSummit/formperma/Dewdd3W-n_OcKObxPYvpW0XBDOKU9xNJxNV0ZbdvKd8" target="_blank">Register</a>
       </nav>
     </div>
   </header>
@@ -1220,7 +1220,7 @@
               </a>
             </div>
 
-            <a class="footer2__cta" href="#contact">Register</a>
+            <a class="footer2__cta" href="https://forms.zohopublic.in/deveshjain0304gm1/form/UttarakhandHealthcareInnovationSummit/formperma/Dewdd3W-n_OcKObxPYvpW0XBDOKU9xNJxNV0ZbdvKd8" target="_blank">Register</a>
           </div>
         </div>
 
