final changes form links

--- a/awards.html
+++ b/awards.html
@@ -51,7 +51,7 @@
           and resilience across hill and remote geographies.
         </p>
         <div class="awardsHero__cta reveal">
-          <a class="pill" href="index.html#contact">Nominate Now</a>
+          <a class="pill" href="https://forms.zohopublic.in/deveshjain0304gm1/form/AwardNomination/formperma/XZbV7Asz6eDJh2ZKYp5VlhRNoBEGFznabxuftNvAwTM" target="_blank">Nominate Now</a>
         </div>
       </div>
     </section>
@@ -117,7 +117,7 @@
           Share your innovation or service impact story with the UKHIS awards committee.
         </p>
         <div class="awardsCTA reveal">
-          <a class="pill" href="index.html#contact">Start a Nomination</a>
+          <a class="pill" href="https://forms.zohopublic.in/deveshjain0304gm1/form/AwardNomination/formperma/XZbV7Asz6eDJh2ZKYp5VlhRNoBEGFznabxuftNvAwTM" target="_blank"> Start a Nomination</a>
           <a class="awardsHero__link" href="index.html#contact">Contact the Team</a>
         </div>
       </div>
