--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="hero2__brand reveal">
           <div class="hero2__logo">
             <div class="hero2__brandImg">
-              <img src="./logo UHIS 2026.png" alt="Uttarakhand Healthcare Summit banner"
+              <img loading="eager" src="./logo UHIS 2026.png" alt="Uttarakhand Healthcare Summit banner"
                 class="hero2__image hero2__logoImage" loading="lazy">
 
             </div>
@@ -92,28 +92,28 @@
         <div class="metricsCarousel" aria-label="Key metrics carousel">
           <div class="metricsTrack" data-metric-track data-marquee-direction="left">
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp" alt="Attendees">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp" alt="Attendees">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">1 DAY</div>
               <div class="metricTile__label">Summit</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp" alt="Speakers">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp" alt="Speakers">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">8+</div>
               <div class="metricTile__label">Curated sessions</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp" alt="Delegates">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp" alt="Delegates">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">40+</div>
               <div class="metricTile__label">Speakers and panelists</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp" alt="Sessions">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp" alt="Sessions">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">150+</div>
@@ -129,28 +129,28 @@
               <div class="metricTile__label">Edition</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp" alt="Summit highlight">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp" alt="Summit highlight">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">13 Mar</div>
               <div class="metricTile__label">2026</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp" alt="Networking">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp" alt="Networking">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">Dehradun</div>
               <div class="metricTile__label">Uttarakhand</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp" alt="Keynote">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp" alt="Keynote">
             </article>
             <article class="metricTile metricTile--stat">
               <div class="metricTile__value">100+</div>
               <div class="metricTile__label">Institutions</div>
             </article>
             <article class="metricTile metricTile--image">
-              <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp" alt="Panels">
+              <img loading="lazy" src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp" alt="Panels">
             </article>
           </div>
         </div>
@@ -189,16 +189,16 @@
 
         <div class="aboutGallery reveal" aria-label="About us highlights">
           <div class="aboutGallery__item">
-            <img src="aboutImages/about-1.webp" alt="Summit highlight">
+            <img loading="lazy" src="aboutImages/about-1.webp" alt="Summit highlight">
           </div>
           <div class="aboutGallery__item">
-            <img src="aboutImages/about-2.webp" alt="Healthcare discussion">
+            <img loading="lazy" src="aboutImages/about-2.webp" alt="Healthcare discussion">
           </div>
           <div class="aboutGallery__item">
-            <img src="aboutImages/about-3.webp" alt="Community care">
+            <img loading="lazy" src="aboutImages/about-3.webp" alt="Community care">
           </div>
           <div class="aboutGallery__item">
-            <img src="aboutImages/about-4.webp" alt="Leadership panel">
+            <img loading="lazy" src="aboutImages/about-4.webp" alt="Leadership panel">
           </div>
         </div>
       </div>
@@ -292,26 +292,26 @@
 
       <div class="partnerLogosMarquee reveal" data-partner-marquee>
         <div class="partnerLogoTrack" data-partner-track data-marquee-direction="right">
-          <div class="partnerLogoItem"><img src="allImages/PoweredByPartner.webp" alt="Powered by partner"></div>
-          <div class="partnerLogoItem"><img src="allImages/HostPartner1.webp" alt="Host partner 1"></div>
-          <div class="partnerLogoItem"><img src="allImages/HostPartner2.webp" alt="Host partner 2"></div>
-          <div class="partnerLogoItem"><img src="allImages/Co-HostPartner.webp" alt="Co-Host partner"></div>
-          <div class="partnerLogoItem"><img src="allImages/KnowledgePartner.webp" alt="Knowledge partner"></div>
-          <div class="partnerLogoItem"><img src="allImages/AcademicPartner1.webp" alt="Academic partner 1"></div>
-          <div class="partnerLogoItem"><img src="allImages/AcademicPartner2.webp" alt="Academic partner 2"></div>
-          <div class="partnerLogoItem"><img src="allImages/AssociatePartner1.webp" alt="Associate partner 1"></div>
-          <div class="partnerLogoItem"><img src="allImages/AssociatePartner2.webp" alt="Associate partner 2"></div>
-          <div class="partnerLogoItem"><img src="allImages/Consulting%20Partner.webp" alt="Consulting partner"></div>
-          <div class="partnerLogoItem"><img src="allImages/HimalayanGiftingPartner.webp" alt="Himalayan Gifting partner">
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/PoweredByPartner.webp" alt="Powered by partner"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/HostPartner1.webp" alt="Host partner 1"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/HostPartner2.webp" alt="Host partner 2"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/Co-HostPartner.webp" alt="Co-Host partner"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/KnowledgePartner.webp" alt="Knowledge partner"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/AcademicPartner1.webp" alt="Academic partner 1"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/AcademicPartner2.webp" alt="Academic partner 2"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/AssociatePartner1.webp" alt="Associate partner 1"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/AssociatePartner2.webp" alt="Associate partner 2"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/Consulting%20Partner.webp" alt="Consulting partner"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/HimalayanGiftingPartner.webp" alt="Himalayan Gifting partner">
           </div>
-          <div class="partnerLogoItem"><img src="allImages/PSU%20Partner1.webp" alt="PSU partner 1"></div>
-          <div class="partnerLogoItem"><img src="allImages/PSU%20Partner2.webp" alt="PSU partner 2"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartners1.webp" alt="Supporting partner 1"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartner2.webp" alt="Supporting partner 2"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartner4.webp" alt="Supporting partner 4"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartner%205.webp" alt="Supporting partner 5"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartner6.webp" alt="Supporting partner 6"></div>
-          <div class="partnerLogoItem"><img src="allImages/SupportingPartner7.webp" alt="Supporting partner 7"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/PSU%20Partner1.webp" alt="PSU partner 1"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/PSU%20Partner2.webp" alt="PSU partner 2"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartners1.webp" alt="Supporting partner 1"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartner2.webp" alt="Supporting partner 2"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartner4.webp" alt="Supporting partner 4"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartner%205.webp" alt="Supporting partner 5"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartner6.webp" alt="Supporting partner 6"></div>
+          <div class="partnerLogoItem"><img loading="lazy" src="allImages/SupportingPartner7.webp" alt="Supporting partner 7"></div>
         </div>
       </div>
     </section>
@@ -348,7 +348,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/19.webp" alt="Lt. Gen Gurmit Singh">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/19.webp" alt="Lt. Gen Gurmit Singh">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Lt. Gen Gurmit Singh, PVSM UYSM AVSM, VSM (Retired)</h3>
@@ -360,7 +360,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/20.webp" alt="Dr. Dhan Singh Rawat">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/20.webp" alt="Dr. Dhan Singh Rawat">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Dr. Dhan Singh Rawat</h3>
@@ -372,7 +372,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/21.webp" alt="Dr R Rajesh Kumar, IAS">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/21.webp" alt="Dr R Rajesh Kumar, IAS">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Dr R Rajesh Kumar, IAS</h3>
@@ -384,7 +384,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/22.webp" alt="Anuradha Pal, IAS">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/22.webp" alt="Anuradha Pal, IAS">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Anuradha Pal, IAS</h3>
@@ -402,7 +402,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/23.webp" alt="Prateek Jain, IAS">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/23.webp" alt="Prateek Jain, IAS">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Prateek Jain, IAS</h3>
@@ -415,7 +415,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/24.webp" alt="Air Marshal (Dr) Pawan Kapoor (Retd.)">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/24.webp" alt="Air Marshal (Dr) Pawan Kapoor (Retd.)">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Air Marshal (Dr) Pawan Kapoor (Retd.)</h3>
@@ -428,7 +428,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/25.webp" alt="Kumar Rahul, IAS">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/25.webp" alt="Kumar Rahul, IAS">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Kumar Rahul, IAS</h3>
@@ -441,7 +441,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/26.webp" alt="Dr. Manoj Nesari">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/26.webp" alt="Dr. Manoj Nesari">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Dr. Manoj Nesari</h3>
@@ -454,7 +454,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/27.webp" alt="Dr Arun T, IAS">
+                <img loading="lazy" class="refposter__img loading="lazy"" src="allImages/27.webp" alt="Dr Arun T, IAS">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Dr Arun T, IAS</h3>
@@ -467,7 +467,7 @@
                 <div class="refposter__topic">
                   <div class="refposter__topicLabel">Speaker</div>
                 </div>
-                <img class="refposter__img" src="allImages/28.webp" alt="Raj Shekhar Joshi">
+                <img loading="lazy" class="refposter__img" src="allImages/28.webp" alt="Raj Shekhar Joshi">
               </div>
               <div class="refposter__bottom">
                 <h3 class="refposter__name">Raj Shekhar Joshi</h3>
