final changes of healthcare

--- a/awards.html
+++ b/awards.html
@@ -144,7 +144,7 @@
           </div>
           <div class="footer2__col">
             <div class="footer2__title">Explore</div>
-            <a href="intex.html#why">Why Attend</a>
+            <a href="intex.html#why">Why To Attend</a>
             <a href="intex.html#who">Who Will Be There</a>
             <a href="intex.html#contact">Contact</a>
             <a href="intex.html#top">Back to Top</a>
