--- a/index.html
+++ b/index.html
@@ -941,8 +941,8 @@
                 <div class="left">
                   <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
                     <div class="pill__pad">
-                      <p class="pill__kpi">~63 lakh people</p>
-                      <p class="pill__desc">access government hospitals annually</p>
+                      <p class="pill__kpi">~63 Lakh People</p>
+                      <p class="pill__desc">Access government hospitals annually</p>
                     </div>
                     <div class="media" aria-hidden="true">
                       <img alt="" src="Veloxx%20Healthcare%20Images/Area%20of%20Progress/63%20lakh%20people%20access%20govt%20hospitals/bb262b4a85ce088c06899f9c14e7496a.webp">
@@ -951,7 +951,7 @@
 
                   <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
                     <div class="pill__pad">
-                      <p class="pill__desc" style="margin:0 0 8px 0;">institutional deliveries increased from</p>
+                      <p class="pill__desc" style="margin:0 0 8px 0;">Institutional deliveries increased from</p>
                       <p class="pill__kpi kpiBig">37% to<br>over 93%</p>
                     </div>
                     <div class="media" aria-hidden="true">
@@ -963,16 +963,16 @@
                 <div class="block block--topSq midA reveal reveal--soft" style="--d:220ms">
                   <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/93%20lakh%20free%20diagnostic%20tests%20delivered%20to%20~29%20lakh%20individuals/edc0f43f797ddd0fd0ad2b55d3b3acc1.webp');"></div>
                   <div class="block__text">
-                    <p class="block__kpi">93 lakh free</p>
-                    <p class="block__desc">diagnostic tests delivered to ~29 lakh individuals</p>
+                    <p class="block__kpi">93 Lakh Free</p>
+                    <p class="block__desc">Diagnostic tests delivered to ~29 lakh individuals</p>
                   </div>
                 </div>
 
                 <div class="block block--botSq midB reveal reveal--soft" style="--d:300ms">
                   <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/India_s%20first%20state%20to%20offer%20completely%20free%20dialysis%2C%20benefiting%2032%2C000%2B%20patients/e530ed79532106bb954313ace17c39ae.webp');"></div>
                   <div class="block__text">
-                    <p class="block__kpi">Free dialysis</p>
-                    <p class="block__desc">benefiting 32,000+ patients statewide</p>
+                    <p class="block__kpi">Free Dialysis</p>
+                    <p class="block__desc">Benefiting 32,000+ patients statewide</p>
                   </div>
                 </div>
 
@@ -982,8 +982,8 @@
                     <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/272%20ALS-BLS%20ambulances%20strengthening%20emergency%20response/4e275d2eeec8131e5b819ca8eadbbd4a.webp');"></div>
                     <div class="pill__pad">
 
-                        <p class="pill__kpi">272 ALS/BLS ambulances</p>
-                        <p class="pill__desc">strengthening emergency response</p>
+                        <p class="pill__kpi">272 ALS/BLS Ambulances</p>
+                        <p class="pill__desc">Strengthening emergency response</p>
                       </div>
                     </div>
                   </article>
@@ -992,8 +992,8 @@
                    <div class="pill_center">
                     <div class="sqInPill" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Area%20of%20Progress/5%2C000%20villages%20declared%20TB-free/e77650404d6227a5e8001e503a527fb0.webp');"></div>
                     <div class="pill__pad">
-                      <p class="pill__kpi">5,000 villages</p>
-                      <p class="pill__desc">declared TB-free across the state</p>
+                      <p class="pill__kpi">5,000 Villages</p>
+                      <p class="pill__desc">Declared TB-free across the state</p>
                     </div>
                     </div>
                   </article>
@@ -1012,8 +1012,8 @@
                 <div class="left">
                   <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
                     <div class="pill__pad">
-                      <p class="pill__kpi">~33,000 bed shortfall</p>
-                      <p class="pill__desc">only 194 diagnostic centres vs need of ~1,000</p>
+                      <p class="pill__kpi">~33,000 Bed Shortfall</p>
+                      <p class="pill__desc">Only 194 diagnostic centres vs need of ~1,000</p>
                     </div>
                     <div class="media" aria-hidden="true">
                       <img alt="" src="Veloxx%20Healthcare%20Images/Persistent%20challenges/33%2C000%20bed%20shortfall%20across%20the%20state_%20only%20194%20diagnostic%20centres%20versus%20an%20estimated%20need%20of%20~1%2C000/imggg.webp">
@@ -1022,8 +1022,8 @@
 
                   <article class="pill pill--img reveal reveal--soft" style="--d:60ms">
                     <div class="pill__pad">
-                      <p class="pill__kpi">86% mountainous terrain</p>
-                      <p class="pill__desc">impacts access and continuity of care</p>
+                      <p class="pill__kpi">86% Mountainous Terrain</p>
+                      <p class="pill__desc">Impacts access and continuity of care</p>
                     </div>
                     <div class="media" aria-hidden="true">
                       <img alt="" src="Veloxx%20Healthcare%20Images/Persistent%20challenges/86_%20mountainous%20terrain%20impacting%20access%20and%20continuity%20of%20care/e1456cadeb4b3f787f5b97d4648233db.webp">
@@ -1034,16 +1034,16 @@
                 <div class="block block--topSq midA reveal reveal--soft" style="--d:220ms">
                   <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Specialist%20vacancies%20exceeding%2050_%20in%20several%20hill%20districts/e3d4322b0d6ecf157920a83176916cef.webp');"></div>
                   <div class="block__text">
-                    <p class="block__kpi">Specialist vacancies</p>
-                    <p class="block__desc">exceeding 50% in several hill districts</p>
+                    <p class="block__kpi">Specialist Vaccine</p>
+                    <p class="block__desc">Exceeding 50% in several hill districts</p>
                   </div>
                 </div>
 
                 <div class="block block--botSq midB reveal reveal--soft" style="--d:300ms">
                   <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Acute%20mental%20health%20workforce%20shortages/adf3c56968787cee4a0b5bcea8ab5509.webp');"></div>
                   <div class="block__text">
-                    <p class="block__kpi">Acute mental health</p>
-                    <p class="block__desc">workforce shortages statewide</p>
+                    <p class="block__kpi">Acute Mental Health</p>
+                    <p class="block__desc">Workforce shortages statewide</p>
                   </div>
                 </div>
 
@@ -1051,8 +1051,8 @@
                   <div class="block block--botSq reveal reveal--soft" style="--d:420ms">
                     <div class="sq" aria-hidden="true" style="background-image:url('Veloxx%20Healthcare%20Images/Persistent%20challenges/Advanced%20tertiary%20care%20concentrated%20in%20limited%20urban%20centres/db8848d0dea7cc8c69e541437ebd0579.webp');"></div>
                     <div class="block__text">
-                      <p class="block__kpi">Advanced tertiary care</p>
-                      <p class="block__desc">concentrated in limited urban centres</p>
+                      <p class="block__kpi">Advanced Tertiary Care</p>
+                      <p class="block__desc">Concentrated in limited urban centres</p>
                     </div>
                   </div>
                 </div>
@@ -1080,7 +1080,7 @@
       <div class="wrap">
         <div class="whyHeader reveal">
           <!-- <button class="miniTop" data-top type="button">Return to top</button> -->
-          <h2>What Attendees Will Gain | Why Attend</h2>
+          <h2>What Attendees Will Gain - Why To Attend</h2>
         </div>
 
         <div class="whyGrid reveal">
@@ -1191,7 +1191,7 @@
           </div>
           <div class="footer2__col">
             <div class="footer2__title">Explore</div>
-            <a href="#why">Why Attend</a>
+            <a href="#why">Why To Attend</a>
             <a href="#who">Who Will Be There</a>
             <a href="#contact">Contact</a>
             <a href="#top">Back to Top</a>
