final changes of healthcare

--- a/awards.html
+++ b/awards.html
@@ -128,7 +128,7 @@
       <div class="wrap footer2__inner">
         <div class="footer2__brandBlock">
           <a class="brand" href="#top" aria-label="Uttarakhand Healthcare Summit Home">
-            <img src="./veloxx_w.webp" alt="">
+            <img src="./veloxx logo g.png" alt="">
           </a>
           <p class="footer2__tagline">Uttarakhand Healthcare &amp; Innovation Summit 2026</p>
         </div>
