added: gallery page

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="#focus">Focus Areas</a>
         <a href="#speakers">Speakers</a>
         <a href="#insights">Insights</a>
+        <a href="gallery.html">2025 Glimpses</a>
         <a href="#why">Why To Attend</a>
         <a href="awards.html">Awards</a>
         <a href="#contact">Contact</a>
