--- a/awards.html
+++ b/awards.html
@@ -29,6 +29,7 @@
         <a href="index.html#about">About</a>
         <a href="index.html#metrics">Key Metrics</a>
         <a href="index.html#focus">Focus Areas</a>
+        <a href="index.html#partners">Partners</a>
         <a href="index.html#speakers">Speakers</a>
         <a href="index.html#insights">Insights</a>
         <a href="index.html#why">Why To Attend</a>
