--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
         <a href="index.html#about">About</a>
         <a href="index.html#metrics">Key Metrics</a>
         <a href="index.html#focus">Focus Areas</a>
+        <a href="index.html#partners">Partners</a>
         <a href="index.html#speakers">Speakers</a>
         <a href="index.html#insights">Insights</a>
         <a class="is-active" href="gallery.html">2025 Glimpses</a>
