--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@
     </section>
 
     <section class="panel2 panel2--glimpses">
-      <div class="wrap">
+      <div class="">
         <div class="sectionTitle sectionTitle--centered reveal">
           <h2>Gallery</h2>
           <div class="sectionRule" aria-hidden="true"></div>
@@ -59,76 +59,142 @@
         <p class="glimpsesIntro reveal">
           A quick look at the energy, conversations, and milestones from UKHIS 2025.
         </p>
-
-        <div class="glimpsesVideo reveal">
-          <div class="glimpsesVideo__frame">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID"
-              title="Uttarakhand Healthcare Summit 2025 highlight reel"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-        </div>
-
-        <div class="glimpsesRows">
-          <div class="glimpsesRow reveal">
-            <div class="glimpsesRow__title">Inaugural Session</div>
-            <div class="glimpsesRow__grid">
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp"
-                  alt="Inaugural gathering at the summit">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp"
-                  alt="Inaugural stage setup">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp"
-                  alt="Welcome address moments">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="aboutImages/about-1.webp" alt="Ceremonial lighting moment">
-              </figure>
+        <!-- <div class="wrap">
+          <div class="glimpsesVideo reveal">
+            <div class="glimpsesVideo__frame">
+              <iframe src="https://www.youtube.com/embed/VIDEO_ID"
+                title="Uttarakhand Healthcare Summit 2025 highlight reel"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             </div>
           </div>
-
-          <div class="glimpsesRow reveal">
-            <div class="glimpsesRow__title">Thought-Provoking Sessions</div>
-            <div class="glimpsesRow__grid">
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp"
-                  alt="Panel discussion in progress">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp"
-                  alt="Curated session on stage">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="aboutImages/about-2.webp" alt="Expert speaker addressing the audience">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="aboutImages/about-3.webp" alt="Audience engagement during a session">
-              </figure>
+        </div> -->
+        <div class="wrap_gallery">
+          <div class="glimpsesRows">
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Inaugural Session</div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/top%20slide/150%20delegates/Copy%20of%20_VDS2400.webp"
+                    alt="Inaugural gathering at the summit">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/top%20slide/1%20day%20summit/Copy%20of%20_VDS3139.webp"
+                    alt="Inaugural stage setup">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/2nd%20edition/Copy%20of%20_VDS2168.webp"
+                    alt="Welcome address moments">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-1.webp" alt="Ceremonial lighting moment">
+                </figure>
+              </div>
             </div>
-          </div>
 
-          <div class="glimpsesRow reveal">
-            <div class="glimpsesRow__title">Networking and Partnerships</div>
-            <div class="glimpsesRow__grid">
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
-                  alt="Networking conversations at the venue">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
-                  alt="Partnerships and collaboration">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
-                  alt="Summit hall ambience">
-              </figure>
-              <figure class="glimpsesCard">
-                <img src="aboutImages/about-4.webp" alt="Networking interactions">
-              </figure>
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Welcome Address & Key Notes </div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/top%20slide/40%2B%20panelist/Copy%20of%20_VDS3250.webp"
+                    alt="Panel discussion in progress">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/top%20slide/8%2Bcurated%20sessions/Copy%20of%20_VDS3871.webp"
+                    alt="Curated session on stage">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-2.webp" alt="Expert speaker addressing the audience">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-3.webp" alt="Audience engagement during a session">
+                </figure>
+              </div>
+            </div>
+
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Panel Discussions</div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                    alt="Networking conversations at the venue">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                    alt="Partnerships and collaboration">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img
+                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    alt="Summit hall ambience">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                </figure>
+              </div>
+            </div>
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Industry Presentations</div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                    alt="Networking conversations at the venue">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                    alt="Partnerships and collaboration">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img
+                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    alt="Summit hall ambience">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                </figure>
+              </div>
+            </div>
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Exhibition Area and Networking Sessions</div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                    alt="Networking conversations at the venue">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                    alt="Partnerships and collaboration">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img
+                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    alt="Summit hall ambience">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                </figure>
+              </div>
+            </div>
+            <div class="glimpsesRow reveal">
+              <div class="glimpsesRow__title">Excellence Awards Ceremony</div>
+              <div class="glimpsesRow__grid">
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/Dehradun/896d4201a40433fd5e5f834848a0c96d.webp"
+                    alt="Networking conversations at the venue">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="Veloxx%20Healthcare%20Images/bottom%20slide/100%2B%20institutions/Copy%20of%20_VDS2850.webp"
+                    alt="Partnerships and collaboration">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img
+                    src="Veloxx%20Healthcare%20Images/bottom%20slide/13th%20march/96fae71c9a43b224de6806573ca1ad4b.webp"
+                    alt="Summit hall ambience">
+                </figure>
+                <figure class="glimpsesCard">
+                  <img src="aboutImages/about-4.webp" alt="Networking interactions">
+                </figure>
+              </div>
             </div>
           </div>
         </div>
